[RED] Fixing payment service test logic