@@ -8,20 +8,16 @@ import id.ac.ui.cs.advprog.eshop.repository.OrderRepository;
 import id.ac.ui.cs.advprog.eshop.repository.PaymentRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
-public class PaymentServiceTest {
-
+class PaymentServiceImplTest {
     @Mock
     private PaymentRepository paymentRepository;
 
@@ -33,7 +29,6 @@ public class PaymentServiceTest {
 
     private Order order;
     private Payment payment;
-    private Map<String, String> paymentData;
     private List<Product> products;
 
     @BeforeEach
@@ -43,144 +38,99 @@ public class PaymentServiceTest {
         this.products = new ArrayList<>();
         Product product1 = new Product();
         product1.setProductId("eb5589-1c39-460e-8860-71afbaf63bd6");
-        product1.setProductName("Sampo Cap Bambang");
+        product1. setProductName("Sampo Cap Bambang");
         product1.setProductQuantity(2);
+        Product product2 = new Product () ;
+        product2.setProductId("a2c62328-4a37-4664-83c7-f32db8620155");
+        product2.setProductName("Sabun Cap Usep");
+        product2.setProductQuantity(1);
         this.products.add(product1);
+        this.products.add(product2);
 
-        order = new Order("13652556-012a-4c07-b546-54eb1396d79b", this.products, 1708560000L, "Safira Sudrajat");
-        paymentData = new HashMap<>();
-        paymentData.put("voucherCode", "ESHOP123ABC45678");
-
-        payment = new Payment("1", "VOUCHER", OrderStatus.WAITING_PAYMENT, paymentData);
+        order = new Order("order1", this.products, 123456789L, "user1");
+        payment = new Payment("payment1", "VOUCHER", OrderStatus.WAITING_PAYMENT, new HashMap<>());
     }
 
     @Test
     void testAddPayment() {
         doNothing().when(paymentRepository).save(any(Payment.class));
-        Payment createdPayment = paymentService.addPayment(order, "VOUCHER", paymentData);
-
-        assertNotNull(createdPayment);
-        assertEquals("VOUCHER", createdPayment.getMethod());
-        assertEquals(OrderStatus.WAITING_PAYMENT, createdPayment.getStatus());
-        verify(paymentRepository, times(1)).save(any(Payment.class));
+        Payment result = paymentService.addPayment(order, "VOUCHER", new HashMap<>());
+        assertNotNull(result);
+        assertEquals(OrderStatus.WAITING_PAYMENT, result.getStatus());
     }
 
     @Test
     void testSetStatusSuccess() {
-        doNothing().when(paymentRepository).save(any(Payment.class));
         when(orderRepository.findById(payment.getId())).thenReturn(order);
-
-        Payment updatedPayment = paymentService.setStatus(payment, "SUCCESS");
-
-        assertEquals(OrderStatus.SUCCESS, updatedPayment.getStatus());
-        verify(paymentRepository, times(1)).save(payment);
-        verify(orderRepository, times(1)).save(any(Order.class));
+        doNothing().when(paymentRepository).save(any(Payment.class));
+        Payment result = paymentService.setStatus(payment, "SUCCESS");
+        assertEquals(OrderStatus.SUCCESS, result.getStatus());
+        verify(orderRepository).save(any(Order.class));
     }
 
     @Test
     void testSetStatusRejected() {
-        doNothing().when(paymentRepository).save(any(Payment.class));
         when(orderRepository.findById(payment.getId())).thenReturn(order);
-
-        Payment updatedPayment = paymentService.setStatus(payment, "REJECTED");
-
-        assertEquals(OrderStatus.REJECTED, updatedPayment.getStatus());
-        verify(paymentRepository, times(1)).save(payment);
-        verify(orderRepository, times(1)).save(any(Order.class));
+        doNothing().when(paymentRepository).save(any(Payment.class));
+        Payment result = paymentService.setStatus(payment, "REJECTED");
+        assertEquals(OrderStatus.REJECTED, result.getStatus());
+        verify(orderRepository).save(any(Order.class));
     }
 
     @Test
-    void testGetPayment() {
-        when(paymentRepository.findById("1")).thenReturn(Optional.of(payment));
-        Payment retrievedPayment = paymentService.getPayment("1");
+    void testGetPaymentExists() {
+        when(paymentRepository.findById("payment1")).thenReturn(Optional.of(payment));
+        Payment result = paymentService.getPayment("payment1");
+        assertEquals(payment, result);
+    }
 
-        assertNotNull(retrievedPayment);
-        assertEquals("1", retrievedPayment.getId());
-        verify(paymentRepository, times(1)).findById("1");
+    @Test
+    void testGetPaymentNotFound() {
+        when(paymentRepository.findById("invalid"))
+                .thenReturn(Optional.empty());
+        assertThrows(IllegalArgumentException.class, () -> paymentService.getPayment("invalid"));
     }
 
     @Test
     void testGetAllPayments() {
-        List<Payment> payments = Arrays.asList(payment);
+        Collection<Payment> payments = List.of(payment);
         when(paymentRepository.findAll()).thenReturn(payments);
-
-        Collection<Payment> retrievedPayments = paymentService.getAllPayments();
-
-        assertEquals(1, retrievedPayments.size());
-        verify(paymentRepository, times(1)).findAll();
-    }
-
-
-    @Test
-    void testProcessPaymentWithValidVoucher() {
-        Map<String, String> paymentData = new HashMap<>();
-        paymentData.put("voucherCode", "ESHOP123ABC45678"); // Valid voucher
-
-        Payment payment = new Payment("P001", "VOUCHER", OrderStatus.WAITING_PAYMENT, paymentData);
-        when(paymentRepository.findById("P001")).thenReturn(Optional.of(payment));
-
-        paymentService.processPayment("P001");
-
-        assertEquals(OrderStatus.SUCCESS, payment.getStatus());
-        verify(paymentRepository, times(1)).save(payment);
+        Collection<Payment> result = paymentService.getAllPayments();
+        assertEquals(1, result.size());
     }
 
     @Test
-    void testProcessPaymentWithInvalidVoucher() {
+    void testProcessPaymentVoucher() {
         Map<String, String> paymentData = new HashMap<>();
-        paymentData.put("voucherCode", "INVALID1234"); // Invalid voucher
+        paymentData.put("voucherCode", "ESHOP1234ABC5678");
+        Payment voucherPayment = new Payment("payment1", "VOUCHER", OrderStatus.WAITING_PAYMENT, paymentData);
+        when(paymentRepository.findById("payment1")).thenReturn(Optional.of(voucherPayment));
 
-        Payment payment = new Payment("P002", "VOUCHER", OrderStatus.WAITING_PAYMENT, paymentData);
-        when(paymentRepository.findById("P002")).thenReturn(Optional.of(payment));
+        paymentService.processPayment("payment1");
 
-        paymentService.processPayment("P002");
-
-        assertEquals(OrderStatus.REJECTED, payment.getStatus());
-        verify(paymentRepository, times(1)).save(payment);
+        assertEquals(OrderStatus.SUCCESS, voucherPayment.getStatus());
+        verify(paymentRepository).save(voucherPayment);
     }
 
     @Test
-    void testProcessPaymentWithValidCashOnDelivery() {
+    void testProcessPaymentCashOnDelivery() {
         Map<String, String> paymentData = new HashMap<>();
-        paymentData.put("address", "Jl. Merdeka No.10");
-        paymentData.put("deliveryFee", "5000");
+        paymentData.put("address", "Jl. Test No. 1");
+        paymentData.put("deliveryFee", "10000");
+        Payment codPayment = new Payment("payment2", "CASH_ON_DELIVERY", OrderStatus.WAITING_PAYMENT, paymentData);
+        when(paymentRepository.findById("payment2")).thenReturn(Optional.of(codPayment));
 
-        Payment payment = new Payment("P003", "CASH_ON_DELIVERY", OrderStatus.WAITING_PAYMENT, paymentData);
-        when(paymentRepository.findById("P003")).thenReturn(Optional.of(payment));
+        paymentService.processPayment("payment2");
 
-        paymentService.processPayment("P003");
-
-        assertEquals(OrderStatus.SUCCESS, payment.getStatus());
-        verify(paymentRepository, times(1)).save(payment);
+        assertEquals(OrderStatus.SUCCESS, codPayment.getStatus());
+        verify(paymentRepository).save(codPayment);
     }
 
     @Test
-    void testProcessPaymentWithEmptyAddressShouldBeRejected() {
-        Map<String, String> paymentData = new HashMap<>();
-        paymentData.put("address", ""); // Alamat kosong
-        paymentData.put("deliveryFee", "5000");
+    void testProcessPaymentInvalidMethod() {
+        Payment invalidPayment = new Payment("payment3", "INVALID_METHOD", OrderStatus.WAITING_PAYMENT, new HashMap<>());
+        when(paymentRepository.findById("payment3")).thenReturn(Optional.of(invalidPayment));
 
-        Payment payment = new Payment("P004", "CASH_ON_DELIVERY", OrderStatus.WAITING_PAYMENT, paymentData);
-        when(paymentRepository.findById("P004")).thenReturn(Optional.of(payment));
-
-        paymentService.processPayment("P004");
-
-        assertEquals(OrderStatus.REJECTED, payment.getStatus());
-        verify(paymentRepository, times(1)).save(payment);
-    }
-
-    @Test
-    void testProcessPaymentWithEmptyDeliveryFeeShouldBeRejected() {
-        Map<String, String> paymentData = new HashMap<>();
-        paymentData.put("address", "Jl. Merdeka No.10");
-        paymentData.put("deliveryFee", ""); // Ongkir kosong
-
-        Payment payment = new Payment("P005", "CASH_ON_DELIVERY", OrderStatus.WAITING_PAYMENT, paymentData);
-        when(paymentRepository.findById("P005")).thenReturn(Optional.of(payment));
-
-        paymentService.processPayment("P005");
-
-        assertEquals(OrderStatus.REJECTED, payment.getStatus());
-        verify(paymentRepository, times(1)).save(payment);
+        assertThrows(IllegalArgumentException.class, () -> paymentService.processPayment("payment3"));
     }
 }
